Update submodule and known good

--- a/test/known-good/C/src/docker/federated/DistributedMultiportContainerized.html
+++ b/test/known-good/C/src/docker/federated/DistributedMultiportContainerized.html
@@ -153,7 +153,16 @@ new
 Source
 </span>
 <span class="source-lf">
-()
+(width
+</span>
+<span class="source-lf keyword-operator-lflang">
+=
+</span>
+<span class="source-lf constant-numeric-int-lflang">
+4
+</span>
+<span class="source-lf">
+)
 </span>
 
 <span class="source-lf">
@@ -181,7 +190,16 @@ new
 Destination
 </span>
 <span class="source-lf">
-()
+(width
+</span>
+<span class="source-lf keyword-operator-lflang">
+=
+</span>
+<span class="source-lf constant-numeric-int-lflang">
+4
+</span>
+<span class="source-lf">
+)
 </span>
 
 <span class="source-lf">
