--- a/test/known-good/C/src/federated/DistributedBank.html
+++ b/test/known-good/C/src/federated/DistributedBank.html
@@ -62,7 +62,25 @@ reactor
 Node
 </span>
 <span class="source-lf">
- {
+(bank_index: 
+</span>
+<span class="source-lf storage-type-lflang">
+int
+</span>
+<span class="source-lf">
+ 
+</span>
+<span class="source-lf keyword-operator-lflang">
+=
+</span>
+<span class="source-lf">
+ 
+</span>
+<span class="source-lf constant-numeric-int-lflang">
+0
+</span>
+<span class="source-lf">
+) {
 </span>
 
 <span class="source-lf">
@@ -204,6 +222,36 @@ shutdown
 </span>
 <span class="source-lf keyword-operator-lflang">
 =
+</span>
+
+<span class="source-lf">
+    if (self
+</span>
+<span class="source-lf keyword-operator-lflang">
+->
+</span>
+<span class="source-lf">
+bank_index) {
+</span>
+
+<span class="source-lf">
+      lf_print_error_and_exit(
+</span>
+<span class="source-lf string-quoted-double-lflang">
+"
+</span>
+<span class="source-lf string-quoted-double-lflang">
+The only bank index should be zero because there should be only one bank member per federate.
+</span>
+<span class="source-lf string-quoted-double-lflang">
+"
+</span>
+<span class="source-lf">
+);
+</span>
+
+<span class="source-lf">
+    }
 </span>
 
 <span class="source-lf">
