--- a/test/known-good/C/src/federated/LoopDistributedCentralizedPhysicalAction.html
+++ b/test/known-good/C/src/federated/LoopDistributedCentralizedPhysicalAction.html
@@ -108,6 +108,19 @@ msec
 <span class="source-lf meta-targetspec-lflang constant-numeric-lflang">
 sec
 </span>
+<span class="source-lf meta-targetspec-lflang">
+,
+</span>
+
+<span class="source-lf meta-targetspec-lflang variable-parameter-lflang">
+  logging
+</span>
+<span class="source-lf meta-targetspec-lflang">
+: 
+</span>
+<span class="source-lf meta-targetspec-lflang storage-type-lflang">
+warn
+</span>
 
 <span class="source-lf meta-targetspec-lflang">
 }
