--- a/test/known-good/TypeScript/src/federated/DistributedCount.html
+++ b/test/known-good/TypeScript/src/federated/DistributedCount.html
@@ -314,7 +314,55 @@ Expected to receive
 +
 </span>
 <span class="source-lf">
- c 
+ 
+</span>
+<span class="source-lf variable-other-constant-reactorinstance-lflang">
+JSON
+</span>
+<span class="source-lf keyword-operator-lflang">
+.
+</span>
+<span class="source-lf variable-other-lflang">
+stringify
+</span>
+<span class="source-lf">
+(c) 
+</span>
+<span class="source-lf keyword-operator-lflang">
++
+</span>
+<span class="source-lf">
+ 
+</span>
+<span class="source-lf string-quoted-double-lflang">
+"
+</span>
+<span class="source-lf string-quoted-double-lflang">
+ but received 
+</span>
+<span class="source-lf string-quoted-double-lflang">
+"
+</span>
+<span class="source-lf">
+ 
+</span>
+<span class="source-lf keyword-operator-lflang">
++
+</span>
+<span class="source-lf">
+ 
+</span>
+<span class="source-lf variable-other-constant-reactorinstance-lflang">
+JSON
+</span>
+<span class="source-lf keyword-operator-lflang">
+.
+</span>
+<span class="source-lf variable-other-lflang">
+stringify
+</span>
+<span class="source-lf">
+(inp) 
 </span>
 <span class="source-lf keyword-operator-lflang">
 +
