Update lingua-franca submodule

--- a/test/known-good/C/src/concurrent/Watchdog.html
+++ b/test/known-good/C/src/concurrent/Watchdog.html
@@ -98,7 +98,7 @@ time
   
 </span>
 <span class="source-lf comment-line-double-dash-lflang">
-// Offset ameliorates startup time.
+// Offset may reduce the likelihood of flakiness if long startup times occur.
 </span>
 
 <span class="source-lf">
