--- a/test/known-good/Cpp/src/docker/HelloWorldContainerized.html
+++ b/test/known-good/Cpp/src/docker/HelloWorldContainerized.html
@@ -5,40 +5,52 @@ target
  
 </span>
 <span class="source-lf meta-targetspec-lflang constant-language-lflang">
-Python
+Cpp
 </span>
 <span class="source-lf meta-targetspec-lflang">
  {
 </span>
 
 <span class="source-lf meta-targetspec-lflang variable-parameter-lflang">
-  docker
-</span>
-<span class="source-lf meta-targetspec-lflang">
-: {
-</span>
-
-<span class="source-lf meta-targetspec-lflang variable-parameter-lflang">
-    rti-image
+  logging
 </span>
 <span class="source-lf meta-targetspec-lflang">
 : 
 </span>
-<span class="source-lf meta-targetspec-lflang string-quoted-double-lflang">
-"
+<span class="source-lf meta-targetspec-lflang storage-type-lflang">
+error
 </span>
-<span class="source-lf meta-targetspec-lflang string-quoted-double-lflang">
-rti:local
+<span class="source-lf meta-targetspec-lflang">
+,  
 </span>
-<span class="source-lf meta-targetspec-lflang string-quoted-double-lflang">
-"
+<span class="source-lf meta-targetspec-lflang comment-line-double-dash-lflang">
+// To test generating a custom trace file name.
+</span>
+
+<span class="source-lf meta-targetspec-lflang variable-parameter-lflang">
+  docker
+</span>
+<span class="source-lf meta-targetspec-lflang">
+: 
+</span>
+<span class="source-lf meta-targetspec-lflang constant-language-lflang">
+true
+</span>
+<span class="source-lf meta-targetspec-lflang">
+,
+</span>
+
+<span class="source-lf meta-targetspec-lflang variable-parameter-lflang">
+  build-type
+</span>
+<span class="source-lf meta-targetspec-lflang">
+: 
+</span>
+<span class="source-lf meta-targetspec-lflang storage-type-lflang">
+Debug
 </span>
 
 <span class="source-lf meta-targetspec-lflang">
-  }
-</span>
-
-<span class="source-lf">
 }
 </span>
 
