--- a/test/known-good/Python/src/docker/PingPongContainerized.html
+++ b/test/known-good/Python/src/docker/PingPongContainerized.html
@@ -107,13 +107,30 @@ true
   docker
 </span>
 <span class="source-lf meta-targetspec-lflang">
+: {
+</span>
+
+<span class="source-lf meta-targetspec-lflang variable-parameter-lflang">
+    rti-image
+</span>
+<span class="source-lf meta-targetspec-lflang">
 : 
 </span>
-<span class="source-lf meta-targetspec-lflang constant-language-lflang">
-true
+<span class="source-lf meta-targetspec-lflang string-quoted-double-lflang">
+"
+</span>
+<span class="source-lf meta-targetspec-lflang string-quoted-double-lflang">
+rti:local
+</span>
+<span class="source-lf meta-targetspec-lflang string-quoted-double-lflang">
+"
 </span>
 
 <span class="source-lf meta-targetspec-lflang">
+  }
+</span>
+
+<span class="source-lf">
 }
 </span>
 
